Removed @Builder from all ProductDTO classes. Added copy constructors for all ProductDTO classes. Corresponding changes.